# xlsx-wasm-parser

./: .gitignore  LICENSE  README.md  babel.config.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
__test__/browser/: getAllRows.spec.ts
__test__/lib/: parseInputToBytes.spec.ts  zodHelpers.spec.ts
__test__/node/: getAllRows.spec.ts  getParsedRows.spec.ts  zod.spec.ts
__test__/testData/: file10.xlsx  zodTestfile.xlsx
__test__/testUtils/: schemas.ts  zod.ts
__test__/test_data/: file10.xlsx
__test__/test_utils/: zod.ts
node/validation/: package.json
scripts/: buildWasm.mjs
src/: getAllRows.ts  getParsedRows.ts  index.ts
src/lib/: parseByteInput.ts  parseInputToBytes.ts  validationHelpers.ts
src/node/: getAllRows.ts  getParsedRows.ts  index.ts
src/node/validation/: getParsedRowsFromSchema.ts
src/types/: index.d.ts
src/validation/: getParsedRowsFromSchema.ts  index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
wasm/tests/: node.rs
