[package]
name = "wasm"
version = "0.1.0"
authors = ["Exsjabe <jakob.bergstrom@explizit.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
calamine = {version = "0.19.1", features = ["dates"]}
serde = {version ="1.0.158", features = ["derive"]}
serde-wasm-bindgen = "0.5.0"
chrono = "0.4.24"
js-sys = "0.3.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
